[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://assets/player_jump.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/player_damaged.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/player_dead.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]

atlas = ExtResource( 2 )
region = Rect2( 240, 228, 16, 28 )
margin = Rect2( 0, 0, 0, 0 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 7.79798, 7.74891 )

[node name="player" type="KinematicBody2D"]

position = Vector2( 0.818985, 5.66798 )
scale = Vector2( 0.330467, 0.326357 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="sprite" type="Sprite" parent="."]

position = Vector2( -2.47826, -17.3674 )
scale = Vector2( 3.02602, 3.06413 )
texture = SubResource( 1 )
_sections_unfolded = [ "Region" ]

[node name="collision" type="CollisionShape2D" parent="."]

position = Vector2( -3.42893, 3.23112 )
scale = Vector2( 3.02602, 3.06413 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="shootfrom" type="Position2D" parent="."]

position = Vector2( 0, -47.3643 )
scale = Vector2( 1.37384, 1.22923 )
_sections_unfolded = [ "Transform" ]

[node name="shotTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="ground_ray" type="RayCast2D" parent="."]

position = Vector2( -3.36455, 12.9826 )
scale = Vector2( 0.791182, 0.61894 )
enabled = true
exclude_parent = true
cast_to = Vector2( 0, 50 )
collision_mask = 1
type_mask = 15

[node name="altShotTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="sound_jump" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 3 )
volume_db = -5.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_damaged" type="AudioStreamPlayer2D" parent="."]

stream = ExtResource( 4 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="sound_dead" type="AudioStreamPlayer2D" parent="."]

pause_mode = 2
stream = ExtResource( 5 )
volume_db = -5.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Pause" ]


